Display test success message

--- a/src/TestResults.css
+++ b/src/TestResults.css
@@ -1,7 +1,6 @@
 .TestResults {
-  background: #ffe8d0;
+  background: burlywood;
   padding: 16px;
-  border-bottom: 3px solid #e40;
   color: #210;
 }
 
